# Traxel

./: .gitignore  README.md  compose.signoz.yml  compose.yml  dev.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/models/: schemas.py
backend/src/routes/: __init__.py  health.py  observability.py  vectorize.py
backend/src/services/: image_processor.py  svg_builder.py  vectorizer.py
backend/src/utils/: metrics_collector.py  obs_store.py  observability.py  telemetry.py  validators.py
backend/tests/: conftest.py
backend/tests/fixtures/: __init__.py  image_factory.py
backend/tests/routes/: test_health.py  test_observability.py  test_vectorize.py
backend/tests/services/: test_image_processor.py  test_svg_builder.py  test_validators.py  test_vectorizer.py
backend/tests/utils/: test_metrics_collector.py  test_obs_store.py  test_telemetry.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts  vitest.smoke.config.ts  wrangler.jsonc
frontend/public/: robots.txt
frontend/src/components/: ObsDashboard.astro  ObsLogin.astro  Preview.astro  UploadZone.astro
frontend/tests/: base-layout.test.ts  component-a11y.test.ts  css-layers.test.ts  css-refactor.test.ts  obs-time.test.ts  observability-dashboard.behavior.test.ts  page-layout.test.ts  seo-config.test.ts  vectorize-runtime.smoke.test.ts  vectorizer-app.behavior.test.ts  workspace-storage.test.ts
(+20 files in other folders)
